@@ -10,6 +10,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [API_PARSER] [SENTINEL_ONE_IDENTITY_GRAPH] New collector
 ### Fixed
 - [API_PARSER] [PROOFPOINT_POD] Increment the last_api_call of 1 second to avoid duplication
+- [API_PARSER] [BLACKBERRY_CYLANCE] Wait for 60s when rate-limited by the API
 
 
 ## [2.27.1] - 2025-06-13
